<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register_button_text" />

    <EditText
        android:id="@+id/edittext_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_base_weight"
        android:layout_alignRight="@+id/edittext_base_weight"
        android:layout_below="@+id/edittext_base_weight"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="time" />

    <EditText
        android:id="@+id/edittext_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_time"
        android:layout_alignRight="@+id/edittext_time"
        android:layout_below="@+id/edittext_time"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edittext_base_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edittext_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_base_weight"
        android:layout_alignRight="@+id/edittext_base_weight"
        android:layout_below="@+id/edittext_name"
        android:layout_marginTop="17dp"
        android:ems="10" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_id"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edittext_name"
        android:layout_alignBottom="@+id/edittext_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:text="@string/name_label_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edittext_id"
        android:layout_alignBottom="@+id/edittext_id"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/id_label_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_time"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/base_weight_label_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_centerVertical="true"
        android:text="@string/time_label_text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edittext_height"
        android:layout_alignBottom="@+id/edittext_height"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/height_label_text" />
    
</RelativeLayout>
